// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders big title when big is passed 1`] = `
<h1
  class="title bigTitle"
>
  Sample
</h1>
`;

exports[`renders small title when big is omitted 1`] = `
<h2
  class="title"
>
  Sample
</h2>
`;

exports[`renders title with link 1`] = `
<a
  class="link"
  href="/"
>
  <h2
    class="title"
  >
    Sample
  </h2>
</a>
`;
